# agent-bridge-kit

./: .gitignore  .windsurfrules  AGENTS.md  README.md  llms.txt  pyproject.toml
.agent/: .bridge-meta.json  mcp_config.json  plugins.json
.agent/agents/: starter-assistant.md
.cursor/agents/: backend-specialist.md  code-archaeologist.md  database-architect.md  debugger.md  devops-engineer.md  documentation-writer.md  explorer-agent.md  frontend-specialist.md  game-developer.md  mobile-developer.md  orchestrator.md  penetration-tester.md  performance-optimizer.md  product-manager.md  product-owner.md  project-planner.md  qa-automation-engineer.md  security-auditor.md  seo-specialist.md  starter-assistant.md  test-engineer.md
.cursor/rules/: api-patterns.mdc  app-builder.mdc  architecture.mdc  backend-specialist.mdc  bash-linux.mdc  behavioral-modes.mdc  brainstorming.mdc  clean-code.mdc  code-archaeologist.mdc  debugger.mdc  (+48 more)
.opencode/: opencode.json
.synapse/: selection.json
.windsurf/: mcp_config.json
docs/: DEBT_COMPLETE.md  README.vi.md  UX_COMPLETE.md  UX_IMPROVEMENTS.md  refactor-baseline.md
src/: copilot_conv.py  kiro_conv.py  kit_sync.py
tests/: __init__.py  conftest.py  test_agent_registry.py  test_capture_service.py  test_cli_integration.py  test_converter_registry.py  test_converters.py  test_copilot_converter.py  test_cursor_converter.py  test_init_service.py  test_kiro_converter.py  test_kiro_reverse_edge.py  test_mcp_transform.py  test_merger.py  test_opencode_converter.py  test_plugins.py  test_reverse_copilot.py  test_reverse_cursor.py  test_reverse_kiro.py  test_roundtrip.py  test_sources.py  test_status_service.py  test_sync_service.py  test_utils.py  test_ux_improvements.py  test_windsurf_converter.py
(+275 files in other folders)
