[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bridge"
version = "1.0.0"
description = "Universal converter for AI agent knowledge with bidirectional sync. Transforms .agent/ format to multiple IDE formats (Cursor, Copilot, Kiro, OpenCode, Windsurf) and captures changes back."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Hao Ngo", email = "hao@example.com" }
]
dependencies = [
    "PyYAML",
    "questionary>=2.0.0",
]
keywords = ["ai", "agents", "kiro", "copilot", "converter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML",
]

[project.scripts]
agent-bridge = "agent_bridge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
check_untyped_defs = false

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
